[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "lupo"
version = "0.0.1"
authors = [
  { name="Anthony Hofmeister", email="me@anthonyhfm.dev" },
]
description = "A Python Framework for creating Cross-Platform Desktop Applications"
readme = "README.MD"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://anthonyhfm.dev"